app/assets/stylesheets/views/product-page.scss
$product-page-blue: #1D70B8;
// See https://github.com/alphagov/govuk-frontend/blob/v2.13.0/src/components/button/_button.scss#L24
$button-shadow-size: $govuk-border-width-form-element;

.product-page {

  &-intro {

    // The GOV.UK Frontend header component wraps content that is `position: relative`
    // This changes its z-index position, putting it above the `<main>` section in the stacking order
    // We need the `<main>` section to be above it, like the default order, so when we apply the
    // negative margin-top it overlaps the theme bar at the bottom of the header
    position: relative;
    margin: -10px 0 govuk-spacing(6) * 1.5 0;
    background: $product-page-blue;
    color: govuk-colour("white");

    &-wrapper {

      @include govuk-width-container;
      user-select: none;
      padding: 0 0 govuk-spacing(9) 0;

      @include govuk-media-query($from: desktop) {
        background-image: file-url('product/proposition-illustration.png');
        background-size: 320px;
        background-repeat: no-repeat;
        background-position: right -6px top 100px;
      }

      &--alternative {
        @include govuk-media-query($from: desktop) {
          background-image: file-url('product/proposition-alternative.svg');
          background-position: right 10px bottom 0;
        }
      }

    }

    h1 {
      @include govuk-font(48, $weight: bold);
      margin: 20px 0 govuk-spacing(6) 0;
    }

    p {
      @include govuk-font(24);
      color: govuk-colour("white");
      margin: govuk-spacing(3) 0 govuk-spacing(6);
    }

  }

  &-section {

    @include govuk-width-container;
    margin-bottom: govuk-spacing(3);

    h2 {
      @include govuk-font(27, $weight: bold);
      margin: 0 0 govuk-spacing(6);
    }

    .with-keyline {
      border-top: 1px solid $govuk-border-colour;
      padding: govuk-spacing(6) * 1.5 0 0 0;
    }

    img {
      width: 100%;
      margin: 0 0 govuk-spacing(6) * 1.5 0;
    }

  }

  &-big-number {
    @include govuk-font(48, $weight: bold, $tabular: true);
    margin: 0 0 0 0;
  }

}

.button-container {
  line-height: 2.36;
}

.button-container__button {
  vertical-align: baseline;
}

.product-page-button {

  // based on the govuk-button styles:
  // https://github.com/alphagov/govuk-frontend/blob/v2.13.0/src/components/button/_button.scss
  @include govuk-font($size: 24, $weight: bold);
  box-shadow: 0 $button-shadow-size 0 govuk-shade($colour: $product-page-blue, $percentage: 15%);

}

